[Employee Controller] [Alfred & Prince] Feature: code to get companies by page and size